# QtExample

./: .buildScript.bat.un~  README.md  buildScript.bat  buildScript.sh
ExampleApp/: CMakeLists.txt  main.cpp  main.qml
ExampleLib/: CMakeLists.txt  ExampleLibClass.cpp  ExampleLibClass.h  ExampleRect.qml
